--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <link rel="icon" href="https://i.pinimg.com/originals/01/ca/da/01cada77a0a7d326d85b7969fe26a728.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Amazon</title>
+  <title>Ruby</title>
 </head>
 <body>
   <div id="root"></div>
