--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="https://i.pinimg.com/originals/01/ca/da/01cada77a0a7d326d85b7969fe26a728.jpg" />
+  <link rel="icon" href="/icon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Ruby</title>
 </head>
